--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,9 +1,12 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pydantic==2.5.0
-python-multipart==0.0.6
-python-dotenv==1.0.0
-requests==2.31.0
-aiofiles==23.2.1
-Pillow==10.1.0
-numpy==1.26.2
+fastapi>=0.115.0
+uvicorn[standard]>=0.32.0
+pydantic>=2.10.0
+python-multipart>=0.0.20
+python-dotenv>=1.0.0
+requests>=2.32.0
+aiofiles>=24.1.0
+Pillow>=11.0.0
+numpy>=2.2.0
+opencv-python>=4.10.0
+SQLAlchemy>=2.0.0
+asyncpg>=0.30.0
