--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,50 +12,51 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.8.0",
-    "axios": "^1.6.0",
-    "three": "^0.158.0",
-    "@react-three/fiber": "^8.15.0",
+    "@microlink/react-json-view": "^1.23.0",
     "@react-three/drei": "^9.88.0",
-    "react-hook-form": "^7.48.0",
-    "react-query": "^3.39.0",
-    "zustand": "^4.4.0",
+    "@react-three/fiber": "^8.15.0",
+    "@tailwindcss/forms": "^0.5.10",
+    "axios": "^1.6.0",
+    "clsx": "^2.0.0",
+    "d3": "^7.8.0",
     "framer-motion": "^10.16.0",
     "lucide-react": "^0.294.0",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0",
-    "react-dropzone": "^14.2.0",
-    "react-hot-toast": "^2.4.0",
-    "react-split": "^2.0.14",
-    "react-window": "^1.8.0",
-    "react-virtualized": "^9.22.0",
-    "d3": "^7.8.0",
-    "recharts": "^2.8.0",
-    "react-pdf": "^7.6.0",
-    "@microlink/react-json-view": "^1.23.0",
+    "react": "^18.2.0",
     "react-color": "^2.19.0",
-    "react-slider": "^2.0.0",
-    "react-select": "^5.8.0",
     "react-datepicker": "^4.25.0",
-    "react-modal": "^3.16.0",
-    "react-tooltip": "^5.21.0",
+    "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.0",
+    "react-ga": "^3.3.0",
     "react-helmet": "^6.1.0",
-    "react-ga": "^3.3.0"
+    "react-hook-form": "^7.48.0",
+    "react-hot-toast": "^2.4.0",
+    "react-modal": "^3.16.0",
+    "react-pdf": "^7.6.0",
+    "react-query": "^3.39.0",
+    "react-router-dom": "^6.8.0",
+    "react-select": "^5.8.0",
+    "react-slider": "^2.0.0",
+    "react-split": "^2.0.14",
+    "react-tooltip": "^5.21.0",
+    "react-virtualized": "^9.22.0",
+    "react-window": "^1.8.0",
+    "recharts": "^2.8.0",
+    "tailwind-merge": "^2.0.0",
+    "three": "^0.158.0",
+    "zustand": "^4.4.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
-    "@types/three": "^0.158.0",
     "@types/d3": "^7.4.0",
-    "@types/react-window": "^1.8.0",
-    "@types/react-virtualized": "^9.21.0",
+    "@types/react": "^18.2.0",
     "@types/react-color": "^3.0.0",
-    "@types/react-slider": "^1.3.6",
-    "@types/react-modal": "^3.16.0",
-    "@types/react-tooltip": "^4.2.4",
+    "@types/react-dom": "^18.2.0",
     "@types/react-helmet": "^6.1.0",
+    "@types/react-modal": "^3.16.0",
+    "@types/react-slider": "^1.3.6",
+    "@types/react-tooltip": "^4.2.4",
+    "@types/react-virtualized": "^9.21.0",
+    "@types/react-window": "^1.8.0",
+    "@types/three": "^0.158.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.0",
